2011-07-26  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Revamp large amount of code to add support for pair<key, mapped>
        values in container, and further down the road, paved the way for
        intrusive container support. However no of it is documented nor unit
        tested. So it is still in stage of infancy. At least the rest works. In
        the process, I rearranged includes and remove some of the files from the
        index, that have no use now.

2011-07-15  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * src/bits/spatial_exceptions.hpp added a new exception check in all
        runtime containers to make sure that library users do not enter a 0
        value for the dimension.

2011-07-14  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * src/frozen_pointset.hpp forzen_runtime_pointset is now
        runtime_frozen_pointset, to tally with the include file name. Same for
        runtime_frozen_boxset.

        * src/boxset.hpp Boxes can be stored in a container now!

        * src/frozen_pointset.hpp cut the pointset file in 2.

        * src/bits/spatial_range.hpp add the helper functions for ranges as
        well as the view for overlap and enclose ranges.

        * src/pointset.hpp After much of reflexion, I decided that it was
        unnecessary to restrict use of pointset or boxset to a particular set
        of range or neighbor iterator. There are some cases were you need such
        functionality. It's better to allow this rather than have ppl complain
        for the need of writing adaptors. Also it's true that basic users may
        make mistakes, if the tutorial is probably written, they shouldn't
        missuse this or that view. On top of that, it makes design easier.

2011-07-13  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * doc/Doxyfile Add grouped distribution of documentation so has to
        save some documentation hassle.
